# wiki-search

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run-app.sh  setup.cfg
.github/workflows/: push.yml
wiki_search/: config.py  context.py  main.py  schemas.py  templates.py  wiki_api.py
wiki_search/static/: search_result.html
