[tool.poetry]
name = "wiki_search"
version = "0.1.0"
description = "A simple web service to search Wikipedia"
authors = ["Sergey Sokolov <hi@teners.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
wikipedia = "^1.4"
httpx = "^0.7.5"
fastapi = {version = "^0.42.0", extras = ["all"]}
aioredis = "^1.3"
returns = "^0.11.0"
python-dotenv = "^0.10.3"
python-decouple = "^3.1"
better-exceptions = "^0.2.2"
[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.12.5"
black = "19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
